@@ -1,0 +1,7 @@
+println(lindexOf("this is a test", "is"));
+println(lindexOf("this is a testz0r", "0"));
+println(lindexOf("this is a test", "t"));
+println(lindexOf("this is a test", "t", 12));
+println(lindexOf("this is a test", "t", 11));
+println(lindexOf("this is a test", "t", 10));
+println(lindexOf("this is a test", "t", 9));
