@@ -1,0 +1,7 @@
+5
+15
+13
+10
+10
+10
+0
