@@ -23,6 +23,7 @@
   at compile time)
 - updated &cast and &casti to allow a class literal to be specified
   as the type to cast to.  
+- added a lindexOf function to obtain the last index of a substring
 
 2.1-beta 16  (11 Jun 07)
 ===========
